# fscl-process-svc

./: .env.example  .gitignore  Cargo.toml  README.md
migration/src/: lib.rs  m20260311_133548_components_functions.rs
migrations/: 20260318120714_components_functions.sql  20260514000100_projects.sql
src/: core.rs  handlers.rs  main.rs  repository.rs  trial.rs
src/adapters/: mod.rs
src/adapters/driven/: mod.rs
src/adapters/driven/msg/: mod.rs  project_created_consumer.rs
src/adapters/driven/web/: api_error.rs  app_state.rs  component_handlers.rs  function_handlers.rs  http_server.rs  mod.rs  responses.rs  utils.rs
src/adapters/driven/web/component/: handlers.rs  mod.rs  requests.rs  responses.rs
src/adapters/driving/: mod.rs
src/adapters/driving/db/: component_repository.rs  error.rs  function_repository.rs  item_repository.rs  mod.rs  repository.rs  seaorm_repository.rs  sqlx_project_repository.rs  sqlx_repository.rs
src/adapters/driving/db/models/: component.rs  component_implements_function.rs  function.rs  mod.rs
src/application/: application_service.rs  component_service.rs  mod.rs  project_created_event_service.rs
src/core/: component.rs  function.rs  item.rs  mod.rs  sub.rs  sub_manager.rs
src/docker/: compose.yaml
src/domain/: component.rs  function.rs  item.rs  mod.rs  resource.rs
src/domain/use_cases/: create_component.rs  mod.rs  use_case.rs
src/ports/: component_port.rs  mod.rs
