[package]
name = "fscl-process-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
fmt = "0.1.0"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.18"
dotenv = "0.15.0"
axum = { version = "0.8.8", features = ["macros"] }
tower = "0.5.3"
anyhow = "1.0.102"
